<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/activity_main_navigation_group_media">
        <item
            android:id="@+id/activity_main_navigation_worships"
            android:icon="@drawable/ic_nav_worships"
            android:title="@string/activity_main_navigation_item_worships"/>
        <item
            android:id="@+id/activity_main_navigation_sermons"
            android:icon="@drawable/ic_nav_sermons"
            android:title="@string/activity_main_navigation_item_sermons"/>
        <item
            android:id="@+id/activity_main_navigation_witnesses"
            android:icon="@drawable/ic_nav_dove"
            android:title="@string/activity_main_navigation_item_witnesses"/>
        <item
            android:id="@+id/activity_main_navigation_psalms"
            android:icon="@drawable/ic_nav_psalms"
            android:title="@string/psalms"
            android:visible="true"/>
        <item
            android:id="@+id/activity_main_navigation_downloads"
            android:icon="@drawable/ic_nav_downloads"
            android:title="@string/downloads"
            android:visible="true"/>
    </group>
    <group>
        <item
            android:id="@+id/activity_main_navigation_news"
            android:icon="@drawable/ic_nav_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/activity_main_navigation_worship_notes"
            android:icon="@drawable/ic_nav_worship_notes"
            android:title="@string/worship_notes"/>
        <item
            android:id="@+id/activity_main_navigation_to_see_christ"
            android:icon="@drawable/ic_nav_cross"
            android:title="@string/to_see_christ"/>
        <item
            android:id="@+id/activity_main_navigation_schedule"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/activity_main_navigation_item_schedule"/>
        <item
            android:id="@+id/activity_main_navigation_birthdays"
            android:icon="@drawable/ic_nav_birthday"
            android:title="@string/activity_main_navigation_item_birthdays"/>
        <item
            android:id="@+id/activity_main_navigation_gallery"
            android:icon="@drawable/ic_nav_gallery"
            android:title="@string/activity_main_navigation_item_gallery"/>
    </group>
    <group android:id="@+id/activity_main_navigation_group_settings">
        <item
            android:id="@+id/activity_main_navigation_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/activity_main_navigation_item_settings"/>
    </group>
</menu>